# Voice-to-Text

./: .gitignore  README.md  TECHNICAL_ASSIGNMENT_SOLUTION.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
